--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,9 +13,12 @@ spring:
       minimum-idle: 10
       pool-name: GuideScopeHikariPool
       keepalive-time: 30000
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: false
     properties:
       hibernate:
